--- a/Landing Page.html
+++ b/Landing Page.html
@@ -13,10 +13,23 @@
   </ol>
   <h2><b>Order Now!</b></h2>
   <form>
+    <label for="size">Size:</label>
+    <select name="size" id="size">
+      <option value="small">Small</option>
+      <option value="large">Large</option>
+      <option selected></option>
+    </select>
+    <label for="colour">Colour:</label>
+    <select name="colour" id="Colour:">
+      <option value="red">Red</option>
+      <option value="green">Green</option>
+      <option value="blue">Blue</option>
+      <option selected></option>
+    </select><br><br>  
     <label for="name">Name:</label>
-    <input type="text" id="t1"><br><br>
+    <input type="text" id="t3" value="example@domain.com"><br><br>
     <label for="email">Email:</label>
-    <input type="text" id="t2"><br><br>
+    <input type="text" id="t4" value="Joe Bloggs"><br><br>
     <input type="Submit">
   </form>  
  </body>
