--- a/Landing Page.html
+++ b/Landing Page.html
@@ -29,7 +29,7 @@
     <label for="name">Name:</label>
     <input type="text" id="t3" value="example@domain.com"><br><br>
     <label for="email">Email:</label>
-    <input type="text" id="t4" value="Joe Bloggs"><br><br>
+    <input type="text" id="t4"><br><br>
     <input type="Submit">
   </form>  
  </body>
