--- a/Landing Page.html
+++ b/Landing Page.html
@@ -31,6 +31,12 @@
     <label for="email">Email:</label>
     <input type="text" id="t4"><br><br>
     <input type="Submit">
-  </form>  
+  </form> 
+  <video autoplay muted>
+    <source src="https://youtu.be/0EqSXDwTq6U?si=kXpt-aYQt1y4aFZS.mp4"
+      type="video/mp4">
+    <source src="https://youtu.be/0EqSXDwTq6U?si=kXpt-aYQt1y4aFZS.ogg"
+      type="video/ogg">
+  </video> 
  </body>
 </html>
