--- a/Landing Page.html
+++ b/Landing Page.html
@@ -33,9 +33,9 @@
     <input type="Submit">
   </form> 
   <video autoplay muted>
-    <source src="https://youtu.be/0EqSXDwTq6U?si=kXpt-aYQt1y4aFZS.mp4"
+    <source src="videofile.mp4"
       type="video/mp4">
-    <source src="https://youtu.be/0EqSXDwTq6U?si=kXpt-aYQt1y4aFZS.ogg"
+    <source src="videofile.ogg"
       type="video/ogg">
   </video> 
  </body>
