--- a/Landing Page.html
+++ b/Landing Page.html
@@ -35,7 +35,7 @@
   <video autoplay muted>
     <source src="findfile.mp4"
       type="video/mp4">
-    <source src="videofile.ogg"
+    <source src="findfile.ogg"
       type="video/ogg">
   </video> 
  </body>
