--- a/Web Page Sections.html
+++ b/Web Page Sections.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <button style="background-color:green;font-size:large;color:black">Click me</button>    	
+  </body>
+</html>
