--- a/Landing Page.html
+++ b/Landing Page.html
@@ -3,40 +3,43 @@
   <title>Landing Page</title>
  </head>
  <body>
-  <h1><b>New Awesome Product</b></h1>
-  <img src="https://blob.sololearn.com/courses/snp.png">
-  <p><i>Introducing our <b><u>latest product</u></b>, designed to make your life easier and more efficient</i></p>
-  <ol>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ol>
-  <h2><b>Order Now!</b></h2>
-  <form>
-    <label for="size">Size:</label>
-    <select name="size" id="size">
-      <option value="small">Small</option>
-      <option value="large">Large</option>
-      <option selected></option>
-    </select>
-    <label for="colour">Colour:</label>
-    <select name="colour" id="Colour:">
-      <option value="red">Red</option>
-      <option value="green">Green</option>
-      <option value="blue">Blue</option>
-      <option selected></option>
-    </select><br><br>  
-    <label for="name">Name:</label>
-    <input type="text" id="t3" value="example@domain.com"><br><br>
-    <label for="email">Email:</label>
-    <input type="text" id="t4"><br><br>
-    <input type="Submit">
-  </form> 
-  <video autoplay muted>
-    <source src="findfile.mp4"
-      type="video/mp4">
-    <source src="findfile.ogg"
-      type="video/ogg">
-  </video> 
+  <header>
+      <h1><b>New Awesome Product</b></h1>
+  </header>
+   <main>
+    <img src="https://blob.sololearn.com/courses/snp.png">
+    <p><i>Introducing our <b><u>latest product</u></b>, designed to make your life easier and more efficient</i></p>
+    <ol>
+     <li>Item 1</li>
+     <li>Item 2</li>
+     <li>Item 3</li>
+    </ol>
+    <h2><b>Order Now!</b></h2>
+    <form>
+     <label for="size">Size:</label>
+     <select name="size" id="size">
+       <option value="small">Small</option>
+       <option value="large">Large</option>
+       <option selected></option>
+     </select>
+     <label for="colour">Colour:</label>
+     <select name="colour" id="Colour:">
+       <option value="red">Red</option>
+       <option value="green">Green</option>
+       <option value="blue">Blue</option>
+       <option selected></option>
+     </select><br><br>  
+     <label for="name">Name:</label>
+     <input type="text" id="t3" value="example@domain.com"><br><br>
+     <label for="email">Email:</label>
+     <input type="text" id="t4"><br><br>
+     <input type="Submit">
+    </form>
+   </main>
+   <footer>
+    <img id="robot" src="https://blob.sololearn.com/courses/robot-c.jpg"><br>
+    <button onclick="robot.src='https://blob.sololearn.com/courses/robot-l.jpg'">Left</button>
+    <button onclick="robot.src='https://blob.sololearn.com/courses/robot-r.jpg'">Right</button> 
+   </footer>      
  </body>
 </html>
