--- a/Landing Page.html
+++ b/Landing Page.html
@@ -4,18 +4,23 @@
  </head>
  <body>
   <header>
-      <h1><b>New Awesome Product</b></h1>
+    <div style="text-align:center; background-color: #FFCA3A">
+     <h1><b>New Awesome Product</b></h1> 
+    </div> 
   </header>
    <main>
+   <div style="text-align:center">
     <img src="https://blob.sololearn.com/courses/snp.png">
     <p><i>Introducing our <b><u>latest product</u></b>, designed to make your life easier and more efficient</i></p>
-    <ol>
+   </div> 
+    <ul>
      <li>Item 1</li>
      <li>Item 2</li>
      <li>Item 3</li>
-    </ol>
-    <h2><b>Order Now!</b></h2>
+    </ul>
+    <h2 style="text-align:center; background-color: #FFCA3A"><b>Order Now!</b></h2>
     <form>
+    <div style="text-align:center">     
      <label for="size">Size:</label>
      <select name="size" id="size">
        <option value="small">Small</option>
@@ -34,12 +39,16 @@
      <label for="email">Email:</label>
      <input type="text" id="t4"><br><br>
      <input type="Submit">
+    </div> 
     </form>
    </main>
    <footer>
+    <div style="text-align:center">   
     <img id="robot" src="https://blob.sololearn.com/courses/robot-c.jpg"><br>
     <button onclick="robot.src='https://blob.sololearn.com/courses/robot-l.jpg'">Left</button>
     <button onclick="robot.src='https://blob.sololearn.com/courses/robot-r.jpg'">Right</button> 
+    </div>   
    </footer>      
  </body>
 </html>
+
